<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            style="@style/TextTheme"
            android:text="@string/length" />

        <EditText
            android:id="@+id/edt_length"
            style="@style/EditTheme"
            android:hint="@string/type_length" />

        <TextView
            style="@style/TextTheme"
            android:text="@string/width" />

        <EditText
            android:id="@+id/edt_width"
            style="@style/EditTheme"
            android:hint="@string/type_width" />

        <TextView
            style="@style/TextTheme"
            android:text="@string/height" />

        <EditText
            android:id="@+id/edt_height"
            style="@style/EditTheme"
            android:hint="@string/type_height" />

        <Button
            android:id="@+id/btn_calculate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/tv_result"
            style="@style/TextTheme"
            android:gravity="center_horizontal"
            android:text="@string/result"
            android:textSize="25sp" />

    </LinearLayout>

</ScrollView>